--- a/blogs/finish-fast-in-2-mins.html
+++ b/blogs/finish-fast-in-2-mins.html
@@ -131,7 +131,7 @@
                 <li>
                     <h4>Consequence: We have a system that scales infra up or down based on the demand and scales well with test scope.</h4>
                     <p>
-                        Since our solution is time aware of each test, and dynamically scales infrastructure up or down based on test scope, <b style="color: blue;"> we now have a system, where we pay for what we use, eliminate waste and still keep our test run time within our acceptable time limits.</b>
+                        <b>Result:</b> Since our solution is time aware of each test, and dynamically scales infrastructure up or down based on test scope, <b style="color: blue;"> we now have a system, where we pay for what we use, eliminate waste and still keep our test run time within our acceptable time limits.</b>
                     </p>
                 </li>
             </ol>
